Enable frozen_string_literals

--- a/google-apis-generator/lib/google/apis/generator/templates/gemspec.tmpl
+++ b/google-apis-generator/lib/google/apis/generator/templates/gemspec.tmpl
@@ -1,3 +1,5 @@
+# frozen_string_literal: true
+
 require File.expand_path("lib/<%= api.base_path %>/gem_version", __dir__)
 
 Gem::Specification.new do |gem|
