--- a/google-apis-generator/lib/google/apis/generator/templates/repo-metadata.json.tmpl
+++ b/google-apis-generator/lib/google/apis/generator/templates/repo-metadata.json.tmpl
@@ -1,9 +1,7 @@
 {
-  <% if gem.api_id %>
-    "api_id": "<%= gem.api_id %>",
-  <% end %>
-    "name_pretty": "<%= api.title %>"
-    "distribution_name": "<%= api.gem_name %> API"
+    "api_id": "<%= api.id %>",
+    "name_pretty": "<%= api.title %>",
+    "distribution_name": "<%= api.gem_name %> API",
     "language": "ruby",
     "library_type": "REST"
 }
